Tried to fix product alignment

--- a/static/stylesheets/style1.css
+++ b/static/stylesheets/style1.css
@@ -217,12 +217,12 @@ li {
 /* this is were you edit the styling of the list of products */
 .product-list {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: calc(33.33% - 5px);
     flex-direction: row;
     justify-content: center;
     align-items: center; /*align at top of container */
     gap: 10px;
-    width: 33%;
+    max-width: 450px;
     margin: 0 auto !important;
 }
 
